--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>cron-expression - 1.0.0-SNAPSHOT</title>
+        <title>kogito-cron-expression-exception - 1.0.0-SNAPSHOT</title>
         <style>
             body {
                 margin: 0;
@@ -236,7 +236,7 @@
                             <h5>Application</h5>
                             <ul>
                                 <li>GroupId: <code>org.acme</code></li>
-                                <li>ArtifactId: <code>cron-expression</code></li>
+                                <li>ArtifactId: <code>kogito-cron-expression-exception</code></li>
                                 <li>Version: <code>1.0.0-SNAPSHOT</code></li>
                                 <li>Quarkus Version: <code>2.12.1.Final</code></li>
                             </ul>
